# ChangeLog for sys-boot/syslinux
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-boot/syslinux/ChangeLog,v 1.97 2013/06/24 13:58:11 chithanh Exp $

*syslinux-5.10 (24 Jun 2013)

  24 Jun 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +syslinux-5.10.ebuild:
  Version bump. bug #473532.

  02 Jun 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  syslinux-5.01.ebuild:
  Update HOMEPAGE, bug #472080.

*syslinux-5.01 (18 Feb 2013)

  18 Feb 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +syslinux-5.01.ebuild:
  Version bump, bug #457974.

  11 Jan 2013; Rick Farina <zerochaos@gentoo.org> syslinux-4.06.ebuild,
  syslinux-5.00.ebuild:
  initially everything appeared to work on arm, it didn't, removing keywords

  11 Jan 2013; Rick Farina <zerochaos@gentoo.org> syslinux-4.06.ebuild,
  syslinux-5.00.ebuild:
  not sure why -* is there, seems to work fine on arm, adding keyword

*syslinux-5.00 (10 Dec 2012)

  10 Dec 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +syslinux-5.00.ebuild:
  Version bump.

  15 Nov 2012; Andreas Schuerch <nativemad@gentoo.org> syslinux-4.06.ebuild:
  x86 stable, see bug 423831

  02 Nov 2012; <ago@gentoo.org> syslinux-4.06.ebuild:
  Stable for amd64, wrt bug #423831

*syslinux-4.06 (24 Oct 2012)

  24 Oct 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +syslinux-4.06.ebuild, -syslinux-4.06_pre11.ebuild:
  Version bump.

*syslinux-4.06_pre11 (21 Jul 2012)

  21 Jul 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +syslinux-4.06_pre11.ebuild, -syslinux-4.06_pre6.ebuild:
  Bump to new prerelease.

  27 Jun 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  syslinux-2.13.ebuild, syslinux-3.86.ebuild:
  No linux-headers dependency for old versions, bug #417133 comment #4.

*syslinux-4.06_pre6 (16 Jun 2012)

  16 Jun 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>