@@ -9,6 +9,7 @@ DIST syslinux-4.06.tar.bz2 5740491 SHA256 dbb7774e36c4596de68fa5e6788ad57809ab31
 DIST syslinux-5.00.tar.xz 5097336 SHA256 c0cfdb6a52c233cfd0d23906d60b208f8a06bd29d516cb9fced989a61eac2fe3 SHA512 c9a257211e218a940da332a8d76460a17ff7b50686951675c42fc6bd3586a72bc584320259df6f3a05f3d0be0ed019817a9636b07801df452a00a8cdf34f7e77 WHIRLPOOL 71a2a99bdc9b4584346506d25e6fd9f308e6a6455d5c81e0360f328ca7e3fe5285740205c3a0292333c71a2832e65ad58a0e696496d6e48514a854bf01f4bc38
 DIST syslinux-5.01.tar.xz 5001008 SHA256 41320ae9c8211bb99b1322fdbf98a83d3bdc0f9a78291ad27f8512b12e16b411 SHA512 ad447d2469c3308393ea65060f09c31fda1ad56d253155e7cf6475690c89f95b449786afeef47068d9edbc4fe605f75799738173d4ed16ef4cfb1d46dcb93117 WHIRLPOOL a69ca0ce056bee334dbe3b2de2dd5365150b47da3e2b1fdcc97b72f2b867ac9a9125c7793e51632de810affa5e3241e3f593776c75899d23fc78300667c3d0ed
 DIST syslinux-5.10.tar.xz 5315660 SHA256 4b52d7647d5584c69764c06a836e0d524e5246bf2e94f68cf86342c415508422 SHA512 56422e14b4aa53ca1a5811da0582dbbb349aa52b9e78868bbedc24c67ef2420c4d0ac63fd68c7f0adc2c22606196276265d503b5b6f9d3d796d9ce42845bbdb5 WHIRLPOOL 77d73bdc1cd75a3ad9f58de8a9fa31a1c4247d579ac8c849e8d0dacc7cd1b9e02b2cf0737f1be1c2bc2e974f4ded3955857588a8a07d6cf35997c57f47d9b583
+DIST syslinux-6.01-pre6.tar.xz 6370356 SHA256 4e4c1b917e27b35384042a59404ea58f3d1ecb02d41949bdb63b4c3dbab2de64 SHA512 421d203963543e44666b0d75f39231ee312c29bf1efae34df61a99348213b8ddb03bfd48bb8d9d2cc77c12174e076b61caf245023849ace6b1eae0e2f1dd14ce WHIRLPOOL 525c3ad6ea8af573d5e31250144382dfca0f2121c1822f027bcaf522b3aa5e2af751d9dab2e453f2f6027e0767d6906b4f7fe307da94596bea915bc11599b0b4
 EBUILD syslinux-2.13.ebuild 953 SHA256 7a496ddb4de0ebbeec24789f1eb88ca50e6890154086a1bd2fc703e22f78bb3b SHA512 c92fafd5ab70535d7d8cc02b3ce18c094a01a6b4471559a9f6000b1146bc61fe88088d465edf1c4b6f36bc602df5570e07e0c04bd1c785abe81e62929f6a12cd WHIRLPOOL 4cebbd6ca21662fb8820835d49619c98e144945bee34b879822e3a19e9fbfdda57826e2af6d9489816ecefe7873494f68386cb7fa1d99324bf4493e39627a566
 EBUILD syslinux-3.86.ebuild 1574 SHA256 53d6aeb61564fb9c8418dd247459bcfc88ae392874d9d19d1eff01ced5ff61eb SHA512 dad2940f6e24cba99eb8a096185599c1d2d8eee5f141af5a8c8f02a43312fe1e76348f028806914714132affb0a94c9280dbdc4eef23fcbf0c8902457e7954d6 WHIRLPOOL ccf67c626a11b7b6b2e63c9c860d4f0a195f119391e089bb4aec5f57df080ce20d26e65d5ecae32992744c3620e8bb7ae8c707d93dcbde9afdba122d3081ddde
 EBUILD syslinux-4.05.ebuild 1838 SHA256 5ec87f5384f866480aebc4410fb753ad7d3db705bce9640f7db9abac27850887 SHA512 04912dbd022591f4227a8a316a146a67a5f3b72851d0a4e2dc4e9ce54f4af8283000e491ee3888f663249ecef5db3e915a06ed4ecbc1b70e303572707ae9494d WHIRLPOOL a3b5a881ba421b245ec54f2a4b9d0d74c0883129b692fc16c442745b0b95e9e49441adc84ab29ca1215f9f40c7a56397e6422e8672be8d0ee11f0e9158bae033
@@ -16,5 +17,6 @@ EBUILD syslinux-4.06.ebuild 1732 SHA256 ced00311b657091b67e33da4c0607650a4f880fb
 EBUILD syslinux-5.00.ebuild 1812 SHA256 cc623ca188419b725c0e48c9cb1b88600d5c9404c316b5739e1b2d29b03ae481 SHA512 56779ac7adbc4c412ac5ec3a59e8bee1716d9dfeeef94bf6f03b01155ca234ba652c22757021647ef6e45d0091a4ffd44a244da50e613486d0e728f739a54582 WHIRLPOOL 77cbe35a5b4a9c17d6deaf326d6f0db4c644b46510d3a215e3692b438a08ee092d21fcf40198f14c1b8f0d6eb550fb1cd9c7d21e5e6c39d1fee174bdcca6fea8
 EBUILD syslinux-5.01.ebuild 1809 SHA256 1b8fdfd94e67956637df967045a19550b9abf43391849152949093f01d2edf14 SHA512 d15be4a176573244cc7d393771ea2b68cbe1f4fbffbc69557b858e8147e04cbcceb8735f40f744da97606cbe67814b667ddf2a21ae0fd079d83fbd3b5e84860b WHIRLPOOL 623bae72a58e5be7213c3fbff8259c46563188f225cc40fe3ea2c9268b8ec3356fc0ec5bace324c612c28330ef663f126875dca443364f75513873f8ce024a02
 EBUILD syslinux-5.10.ebuild 2194 SHA256 4115bf360b8748373573ac68da41012d6068de35603ca6de4e357d29c67335ce SHA512 77469a9a18a4246c14beac6093c86f764f0e17eb7a5a3c8b47a8ec698621edd5967e5a08151f7e31f38807bede60fb85a9a510d2d4f3959649c4699776da207e WHIRLPOOL c685f8cf5d1a802f4bb9286347e1a86d935c85bed80cdca52eae03086b6cc2473dac24b8d6f66a1339fff05ce3f5d586e73462692bf7c9001fe4ae7938a203c0
-MISC ChangeLog 17135 SHA256 3e2f25819732e343e189a4f46257c8dc97f272611f189b545c402bbb99fba3b2 SHA512 6a8d69f304ed0f1e4e1a8c95190a9d717dc279f27a0beed9826d6fee10e50ace00e1497cab99c466e35ed4aaa080a38506a0c048f2dd0708e500d0327484779d WHIRLPOOL 0a95aa38c32db5aa9df2a33f58de83a4e36f2e8b4e5124f7dec4d6ec275e979808f1ee41f7e7157bb364834b37df019835f4131c472ccd7876c38f7d9e1405e8
+EBUILD syslinux-6.01_pre6.ebuild 2555 SHA256 73f8207fdab1273ee84e946691c1f9d7c66dcb17bb3e65f4e076d33d04f06eeb SHA512 5c7a751e63e9d8eea92ba9f84c10b113daaf9ee360ab51e414a0b951f9f843e527e225155e116be787f364da33b035289a4de9f4a132fbb3a55748dd846bd51c WHIRLPOOL b41d239014f48707bc21735b5ab2c87522a8f427712034ffb67a09c4f6e1c363192962f6a07690a9f2d8dd59e6c286148334a171dbe667cfaa8f55cd17c501e9
+MISC ChangeLog 17309 SHA256 9de9864a79305cd4e1093f8d6cd2ef501f1e45932e1b7e7061a726a3fae48636 SHA512 9334611a23af00dc5190967beb76307a02381bb0fa475dd79fded67c7f247346960078f424a91e42f33b4def44d0bd8b9eddb46fffa2c9f1abe88252b85a07ce WHIRLPOOL 6f7bf6df3f95c20bc0b5826b569eb12ce6f3b2605de23b8dd553c661780b12ab71b258667e015a6ed96857cc0ce5056c3252a091775b3aeccf473e727dbe1910
 MISC metadata.xml 273 SHA256 ea16e9afcad5ef9e9b29e6959a4632309279e4e0de69c29b40279226c3917b80 SHA512 2176e73df20869d44d0d5dc739d9af2c123ec5e78485f88e6a750a0381885f1b030f41f19e24a9aa6d451a35835fb7beb9b8a862d9be12a3de0a40d7bfcfd370 WHIRLPOOL ff94d5d03cfd6e0e7cc2c6a05e623d4f9c34701a439ab6b056602e4f57d8196d799c62dfac6812de9f59bd485dceed3e65ec1b0a7bcf73350e065bd8fb34e618
