@@ -1,6 +1,12 @@
 # ChangeLog for sys-boot/syslinux
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-boot/syslinux/ChangeLog,v 1.97 2013/06/24 13:58:11 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-boot/syslinux/ChangeLog,v 1.98 2013/07/03 15:23:52 chithanh Exp $
+
+*syslinux-6.01_pre6 (03 Jul 2013)
+
+  03 Jul 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  +syslinux-6.01_pre6.ebuild:
+  Bump to prerelease with EFI support.
 
 *syslinux-5.10 (24 Jun 2013)
 
